--- a/frontend/styles/ViewPost.module.css
+++ b/frontend/styles/ViewPost.module.css
@@ -14,6 +14,7 @@
   height: 100%;
   gap: var(--margin-unit);
   background-color: white;
+  border-right: 4px solid black;
   padding: calc(var(--padding-unit) * 2);
 }
 
@@ -39,29 +40,37 @@
   width: 100%;
   height: 0px;
   flex-grow: 1;
-  overflow-y: scroll;
+  padding: 0 calc(var(--padding-unit) * 3);
+  align-items: center;
+  overflow: hidden scroll;
+  background-color: white;
+}
+
+.chat::-webkit-scrollbar {
+  width: 8px;
+}
+
+.chat::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+.chat::-webkit-scrollbar-thumb {
+  background-color: #0000009f;
+  border-radius: 100px;
 }
 
 .chat .message {
-  color: white;
   margin: var(--margin-unit);
   font-size: calc(var(--global-font-size) * 0.8);
-  width: 40%;
+  width: 100%;
+  margin: 0;
   display: flex;
   flex-direction: column;
   padding: var(--padding-unit);
+  border-bottom: 1px solid black;
+  background-color: rgb(255, 255, 255);
   word-wrap: break-word;
-}
-
-.chat .message.other {
-  background-color: rgba(66, 63, 63, 0.616);
-  border-radius: 0 10px;
-}
-
-.chat .message.me {
-  border-radius: 10px 0;
-  align-self: flex-end;
-  background-color: rgba(9, 239, 185, 0.358);
 }
 
 .chat .message .author {
@@ -70,23 +79,9 @@
   margin-bottom: calc(var(--margin-unit) * 1);
 }
 
-.chat .message.other .author {
-}
-
-.chat .message.me .author {
-  text-align: end;
-}
-
 .chat .message .data {
   font-family: Arial, Helvetica, sans-serif;
   font-size: var(--global-font-size);
-}
-
-.chat .message.other .data {
-}
-
-.chat .message.me .data {
-  text-align: end;
 }
 
 .chat .message .time_sent {
@@ -94,28 +89,37 @@
   font-weight: 400;
 }
 
-.chat .message.other .time_sent {
-  text-align: end;
-}
-
-.chat .message.me .time_sent {
-}
-
 .chatbox .inputbox {
+  background-color: white;
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 40px;
-}
-
-.chatbox .inputbox .input {
-  width: 0px;
-  flex-grow: 1;
-  resize: none;
+  height: 70px;
   padding: var(--padding-unit);
 }
 
+.chatbox .inputbox .input {
+  flex-grow: 1;
+  resize: none;
+  padding: calc(var(--padding-unit) * 2);
+  border-radius: 1rem;
+}
+
+.chatbox .inputbox .input::-webkit-scrollbar {
+  display: none;
+}
+
 .chatbox .inputbox .send {
-  background-color: aqua;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50px;
+  margin: var(--margin-unit);
+  padding: 0;
+  text-align: center;
+  background-color: transparent;
+}
+
+.chatbox .inputbox .send:hover {
+  background-color: #d3d3d3;
 }
