--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 .suggestions {
   display: flex;
+  width: 100%;
   height: 100%;
   flex-direction: row;
   justify-content: flex-start;
@@ -31,42 +33,56 @@
 
 .post_card {
   display: flex;
-  flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.6);
+  flex-direction: row;
   border-radius: 1rem;
-  width: 30%;
-  max-width: 400px;
-  height: fit-content;
-  padding: calc(var(--padding-unit) * 2);
+  width: 32%;
+  height: 200px;
   margin: var(--margin-unit);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
   cursor: pointer;
   transition: background-color 0.5s;
 }
 
-.post_card:hover {
-  background-color: rgb(255, 255, 255);
+.post_card .image {
+  flex-grow: 1;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem 0 0 1rem;
 }
 
 .post_card .content {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  width: calc(100% - 170px);
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 0 1rem 1rem 0;
+}
+
+.post_card:hover .content {
+  background-color: rgb(255, 255, 255);
+}
+
+.post_card .content,
+.footer {
+  padding: calc(var(--padding-unit) * 2);
 }
 
 .post_card .content .subject {
-  width: 60%;
-  cursor: pointer;
   font-size: large;
   padding: var(--padding-unit);
 }
 
 .post_card .content .description {
   flex-grow: 1;
-  overflow-x: hidden;
+  padding: var(--padding-unit);
+}
+
+.post_card .content .subject,
+.description {
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: var(--padding-unit);
 }
 
 .post_card .footer {
@@ -74,7 +90,6 @@
   flex-direction: row;
   justify-content: space-between;
   margin: var(--margin-unit);
-  padding: var(--padding-unit);
   border-top: 4px solid black;
 }
 
